<resources>
    <string name="app_name" translatable="false">eGroceries</string>
    <string name="action_settings">Paramètres</string>
    <string name="theme_header">Personnalisation</string>
    <string name="data">Données</string>
    <string name="theme_title">Thème de l\'application</string>
    <string name="reset_suggestions">Réinitialiser les suggestions</string>
    <string name="priority_essential">Indispensable</string>
    <string name="priority_normal">Moyenne</string>
    <string name="priority_low">Basse</string>
    <string name="action_create_list">Nouvelle liste de courses</string>
    <string name="cancel_create_list">Création de la liste annulée</string>
    <string name="enter_list_name">Entrez le nom de la liste</string>
    <string name="add">Ajouter</string>
    <string name="nom_liste_vide">Merci d\'entrer un nom</string>
    <string name="lists">Vos listes de courses</string>
    <string name="delete">Supprimer</string>
    <string name="edit">Editer</string>
    <string name="confirm_delete">Confirmez-vous la suppresion de</string>
    <string name="q_mark">" ?"</string>
    <string name="yes_delete">Oui, supprimer</string>
    <string name="no_cancel">Non, annuler</string>
    <string name="list_deletion_canceled">Suppression de la liste annulée</string>
    <string name="list_deletion_confirmed">La liste a bien été supprimée</string>
    <string name="action_add_article">Ajouter un article à la liste</string>
    <string name="enter_article_name">Entrez le nom de l\'article</string>
    <string name="cancel_add_article">Ajout de l\'article annulé</string>
    <string name="validate">Valider</string>
    <string name="priority">Priorité</string>
    <string name="notes">Remarques</string>
    <string name="nb">nb</string>
    <string name="article_name">Nom de l\'article</string>
    <string name="edit_article_successful">L\'article a bien été édité</string>
    <string name="cancel_edit_article">Modification de l\'article annulée</string>
    <string name="edit_article">Modification de l\'article</string>
    <string name="article_deletion_canceled">Suppression de l\'article annulée</string>
    <string name="article_deletion_confirmed">L\'article a bien été supprimé</string>
    <string name="edit_liste">Modification de la liste</string>
    <string name="cancel_edit_liste">Modification de la liste annulée</string>
    <string name="edit_liste_successful">La liste a bien été modifiée</string>
    <string name="confirm_reset">Confirmez-vous la réinitialisation des suggestions ?</string>
    <string name="yes_reset">Oui, réinitialiser</string>
    <string name="suggestions_reset_confirmed">Les suggestions ont bien été réinitialisées</string>
    <string name="suggestions_reset_canceled">Les suggestions n\'ont pas été réinitialisées</string>
    <string name="article_added">L\'article a bien été ajouté</string>
    <string name="theme_default">Par défaut</string>
    <string name="theme_envy_green">Vert Envie</string>
    <string name="theme_sun_dew_gold">Rosée de Soleil</string>
    <string name="theme_panther_pink">Rose Panthère</string>
    <string name="theme_blizzard_blue">Bleu Blizzard</string>
    <string name="theme_furious_red">Rouge Furieux</string>
    <string name="theme_emo_dark">Emo Sombre</string>
</resources>
