<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditArticle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/modifyArticleName"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/article_name"
                        android:inputType="textPersonName" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:elevation="4dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:gravity="center_vertical|end"
                            android:text="x"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            tools:ignore="HardcodedText" />

                        <EditText
                            android:id="@+id/modifyArticleQuantite"
                            android:layout_width="32dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="24dp"
                            android:ems="10"
                            android:gravity="center"
                            android:hint="@string/nb"
                            android:inputType="numberDecimal"
                            android:maxLength="2" />

                    </LinearLayout>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/modifyArticleRecupere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="0"
                    android:scaleX="1.3"
                    android:scaleY="1.3" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:hint="@string/notes"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/modifyArticleRemarques"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxHeight="100dp"
                android:maxLength="128" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/groupPrioriteEditArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:checkedButton="@id/articleSetPrioriteMoyenne">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority" />

            <RadioButton
                android:id="@+id/articleSetPrioriteIndispensable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority_essential" />

            <RadioButton
                android:id="@+id/articleSetPrioriteMoyenne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority_normal" />

            <RadioButton
                android:id="@+id/articleSetPrioriteBasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority_low" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:onClick="onClickValider"
            android:text="@string/validate" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:onClick="onClickSupprimer"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>
</ScrollView>